fix post-content overflow bug

--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -18,6 +18,10 @@
     font-size: 1vw;
 }
 
+.post-content {
+    width: 100%;
+}
+
 .timestamp {
     color: grey;
 }
@@ -31,6 +35,8 @@
     color: lightblue;
     text-decoration: none;
     display: block;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .post-images img {
